--- a/css/style.css
+++ b/css/style.css
@@ -53,17 +53,42 @@ Stage
     box-shadow: 0px 10px 20px 0px;
 }
 
-.resume-item {
-    padding: 10px 0 20px 20px;
-    margin-top: -2px;
-    border-left: 2px solid #000000;
-    position: relative;
-}
-
 .resume-item h2 {
     margin-left: 100px;
 }
 
 .img_stage1 {
     width: 30%;
+}
+
+.img_projets1 {
+    border-radius: 10%;
+}
+
+@media (max-width: 728px) {
+    .img_stage1 {
+        width: 75%;
+    }
+    .img_stage2 {
+        width: 75%;
+    }
+    .img_projets1 {
+        size: 20%;
+    }
+}
+
+@media (max-width: 376px) {
+    .titre_veille {
+        font-size: 27px;
+    }
+}
+
+@media (max-width: 321px) {
+    .titre_veille {
+        font-size: 20px;
+    }
+    .img_projets1 {
+        width: 100%;
+        height: auto;
+    }
 }
