--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,6 @@ li {
     opacity: 0.5;
 }
 
-
-/*----------------------------------------------------------------------------------------------
-Stage
------------------------------------------------------------------------------------------------*/
-
 .card {
     background-color: #ececec;
     box-shadow: 0px 1px 5px 0px;
@@ -65,6 +60,14 @@ Stage
     border-radius: 10%;
 }
 
+.ensavoirplus {
+    color: #7DAA95;
+}
+
+.Titre1Test {
+    color: aqua;
+}
+
 @media (max-width: 728px) {
     .img_stage1 {
         width: 75%;
@@ -90,5 +93,11 @@ Stage
     .img_projets1 {
         width: 100%;
         height: auto;
+    }
+}
+
+@media (max-width: 1025px) {
+    .titrecentre {
+        text-align: center;
     }
 }
