--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,9 @@ footer ul a:link {
         text-align: center;
     }
 }
+
+@media (max-width: 425) {
+    ion-icon {
+    transform: translateX(-10px);
+    }
+}
