--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,7 @@ footer ul a:link {
 nav.navbar.navbar-fixed-top.navbar-inverse {
     background-color: #1c1c1cb8;
 }
+
+strong {
+    color:#ff4949;
+}
